--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<!-- main page information -->
 	<title>MoGo</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="lorem ipsum Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="lorem ipsum Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.">
+
 
 	<!-- page stylesheets -->
 	<link rel="stylesheet" href="styles/normalize.css"> <!-- NORMALIZE css -->
@@ -88,23 +89,23 @@
 		<section class="NUMBERS_block">
 	
 		<article class="NUMBERS_content">
-			<div class="NUMBERS_item">
+			<div class="NUMBERS_item NUMBERS_item1">
 				<span class="number">42</span>
 				<span class="number-defenition">web design projects</span>
 			</div>
-			<div class="NUMBERS_item">
+			<div class="NUMBERS_item NUMBERS_item2">
 				<span class="number">123</span>
 				<span class="number-defenition">happy client</span>
 			</div>
-			<div class="NUMBERS_item">
+			<div class="NUMBERS_item NUMBERS_item3">
 				<span class="number">15</span>
 				<span class="number-defenition">award winner</span>
 			</div>
-			<div class="NUMBERS_item">
+			<div class="NUMBERS_item NUMBERS_item4">
 				<span class="number">99</span>
 				<span class="number-defenition">cup of coffe</span>
 			</div>
-			<div class="NUMBERS_item">
+			<div class="NUMBERS_item NUMBERS_item5">
 				<span class="number">24</span>
 				<span class="number-defenition">members</span>
 			</div>
@@ -121,52 +122,50 @@
 		</article>
 		
 		<article class="SERVICE_table">
-			<div class="SERVICE_table_row">
+
 				<div class="SERVICE_table_item">	<!-- 1-1 Item -->
 						<div class="SERVICE_img">	<img src="img/service/alarm.png" alt="alarm icon">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>Photography</span>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 						</div>
 				</div>
 				<div class="SERVICE_table_item">	<!-- 1-2 Item --> 
 						<div class="SERVICE_img">	<img src="img/service/lineGraph.png" alt="line graph icon">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>Web Design</span>
 							<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 						</div>
 				</div>
 				<div class="SERVICE_table_item">	<!-- 1-3 Item -->
 						<div class="SERVICE_img">	<img src="img/service/computer.png" alt="computer">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>Creativity</span>
 							<p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 						</div>
 				</div>
-			</div>	<!-- SERVICE_table_row (1) -->
-			<div class="SERVICE_table_row">
 				<div class="SERVICE_table_item">	<!-- 2-1 Item -->
 						<div class="SERVICE_img">	<img src="img/service/book.png" alt="book">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>Seo</span>
 							<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 						</div>
 				</div>
 				<div class="SERVICE_table_item">	<!-- 2-2 Item -->
 						<div class="SERVICE_img">	<img src="img/service/home.png" alt="home">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>CSS/HTML</span>
 							<p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
 						</div>
 				</div>
 				<div class="SERVICE_table_item">	<!-- 2-3 Item -->
 						<div class="SERVICE_img">	<img src="img/service/imageScope.png" alt="image">	</div>
-						<div class="SERIVCE_text">
+						<div class="SERVICE_text">
 							<span>Digital</span>
 							<p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 						</div>
 				</div>
-			</div>	<!-- SERVICE_table_row (2) -->
+
 		</article>
 	
 		</section>	<!-- SERVICE_block -->
@@ -181,8 +180,9 @@
 	
 		<article class="CROSSPLATFORM_devices">
 			<img class="CROSSPLATFORM_tablet"src="img/crossplatform_tablet.png" alt="tablet">
-			<img class="CROSSPLATFORM_phone"src="img/crossplatform_phone.png" alt="phone">
 		</article>
+		
+		<img class="CROSSPLATFORM_phone"src="img/crossplatform_phone.png" alt="phone">
 	
 		</section>	<!-- CROSSPLATFORM_block -->
 	</section>	<!-- CROSSPLATFORM -->
@@ -196,18 +196,18 @@
 		</article>
 		
 		<article class="ACTIVITY_content">
-			<div class="ACTIVITY_content_item"> <img src="img/activity_photo.png" alt="our activity"> </div> <!-- ACTIVITY img -->
+			<div class="ACTIVITY_content_item activity_content_image"></div> <!-- ACTIVITY img -->
 			<div class="ACTIVITY_content_item"> <!-- Accordion block -->
 			<div class="accordion">
 	
 				<div class="accordion_item">	<!-- Accordion 1 element -->
-					<div class="accordion_header">
+					<div class="accordion_header active">
 						<img class="accordion_icon" src="img/service/picture.png" alt="picture">
 						<h6 class="accordion_title">Photography</h6>
-						<img class="accordion_arrow active" src="img/service/accordion_arrow.png" alt="arrow up">
+						<img class="accordion_arrow" src="img/service/accordion_arrow.png" alt="arrow up">
 					</div>
-					<div class="accordion_main">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div class="accordion_main active_main">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 				</div> 
 				<div class="accordion_item">	<!-- Accordion 2 element -->
@@ -216,12 +216,18 @@
 						<h6 class="accordion_title">Creativity</h6>
 						<img class="accordion_arrow" src="img/service/accordion_arrow.png" alt="arrow down">
 					</div>
+					<div class="accordion_main">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 				</div>
 				<div class="accordion_item">	<!-- Accordion 3 element -->
 					<div class="accordion_header">
 						<img class="accordion_icon" src="img/service/bullseye.png" alt="bullseye">
 						<h6 class="accordion_title">Web Design</h6>
 						<img class="accordion_arrow" src="img/service/accordion_arrow.png" alt="arrow down">
+					</div>
+					<div class="accordion_main">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 				</div>
 			</div>	<!-- accordion -->
